<resources>
    <string name="app_name">Easy PLC</string>
    <string name="add_program_label">Add Program</string>
    <string name="program_name_label">Program Name: </string>
    <string name="program_description_label">Program Desc: </string>
    <string name="position_entry_label"><u>Position Entry</u></string>
    <string name="jog_label">Jog</string>
    <string name="xneg">X-</string>
    <string name="xpos">X+</string>
    <string name="yneg">Y-</string>
    <string name="ypos">Y+</string>
    <string name="zneg">Z-</string>
    <string name="zpos">Z+</string>
    <string name="x_label">X: </string>
    <string name="y_label">Y: </string>
    <string name="z_label">Z: </string>
    <string name="teach">Teach</string>
    <string name="test_program">Test</string>
    <string name="program_list_label"><u>Program Listing</u></string>
    <string name="relay_air_label">Air</string>
    <string name="relay_mold_label">Mold</string>
    <string name="init_label">Init</string>
    <string name="download_label">DL</string>
    <string name="home_label">Home</string>
    <string name="reset_label">Reset</string>
    <string name="program_add">Add</string>
    <string name="program_copy">Copy</string>
    <string name="program_delete">Delete</string>
    <string name="about">About</string>
    <string name="step_tenth_mm">0.1mm</string>
    <string name="step_one_mm">1mm</string>
    <string name="step_five_mm">5mm</string>
    <string name="step_ten_mm">10mm</string>
</resources>
